5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_820.log
== TEST (2019-04-07 16:17:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:11:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:12:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor / 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor / 50 = notas_R$50
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:36:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor// 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 22
    print(int(notas_R$50))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:37:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor// 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print(notas50)
print(notas10)
print(notas2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(notas50)
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:38:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor// 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print(notas50)
print(notas10)
print(notas2)

-- EXECUTION TIME:
0.126533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 22, in <module>
    print(notas50)
NameError: name 'notas50' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:38:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor// 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print(notas50)
print(notas10)
print(notas2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(notas50)
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:42:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print("Temos",Notas50,"cedulas de 50 R$")
print("Temos",Notas10,"cedulas de 10 R$")
print("Temos",Notas2,"cedulas de 2 R$")

-- OUTPUT:
Temos 40 cedulas de 50 R$
Temos 2 cedulas de 10 R$
Temos 4 cedulas de 2 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:42:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print("Temos",Notas50,"cedulas de 50 R$")
print("Temos",Notas10,"cedulas de 10 R$")
print("Temos",Notas2,"cedulas de 2 R$")

-- EXECUTION TIME:
0.176675
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
Temos 40 cedulas de 50 R$
Temos 2 cedulas de 10 R$
Temos 4 cedulas de 2 R$
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:44:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? 138"))

# Quantidade de notas de R$ 50
Notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print("Temos",Notas50,"cedulas de 50 R$")
print("Temos",Notas10,"cedulas de 10 R$")
print("Temos",Notas2,"cedulas de 2 R$")

-- OUTPUT:
Temos 40 cedulas de 50 R$
Temos 2 cedulas de 10 R$
Temos 4 cedulas de 2 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:44:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? 138"))

# Quantidade de notas de R$ 50
Notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print("Temos",Notas50,"cedulas de 50 R$")
print("Temos",Notas10,"cedulas de 10 R$")
print("Temos",Notas2,"cedulas de 2 R$")

-- EXECUTION TIME:
0.202178
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
Temos 40 cedulas de 50 R$
Temos 2 cedulas de 10 R$
Temos 4 cedulas de 2 R$
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 17:38:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print(Notas50)
print(Notas10)
print(Notas2)

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 17:38:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
Notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
Resto50 = valor % 50

# Quantidade de notas de R$ 10
Notas10 = Resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
Resto10 = Resto50 % 10

# Quantidade de notas de R$ 2
Notas2 = Resto10 // 2

print(Notas50)
print(Notas10)
print(Notas2)

-- EXECUTION TIME:
0.205051
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
